Minor changes index.css, package.json
Resized profile pic, updated index.js, fixed package.json homepage

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61e9fb;
 }
 
+img{
+  max-width: 20%;
+  max-height: 20%;
+}
+
 :root {
   --active-color: #ffee93;
   --link-text-color: #f1faee;
