--- a/src/Projects.css
+++ b/src/Projects.css
@@ -42,14 +42,6 @@ p {
   color: white;
 }
 
-.profilePic {
-  max-width: 20%;
-  max-height: 20%;
-  border-style: double;
-  border-color: #13131a;
-  overflow: "hidden";
-}
-
 .github {
   width: 30px;
   height: 30px;
@@ -81,6 +73,13 @@ li {
 }
 a {
   color: #65068b;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4rem;            /* Footer height */
 }
 
 @keyframes App-logo-spin {
