--- a/src/Projects.css
+++ b/src/Projects.css
@@ -76,7 +76,7 @@ a {
 }
 
 footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 4rem;            /* Footer height */
